# api/openapi.yaml
@@ -26,31 +26,50 @@ paths:
               schema:
                 $ref: "#/components/schemas/DownloadsResponse"
         "400":
-          $ref: '#/components/responses/BadRequest'
+          $ref: '#/components/responses/BadRequest400'
         "500":
-          $ref: '#/components/responses/InternalServerError'
+          $ref: '#/components/responses/InternalServerError500'
   /downloads/{id}:
     get:
       summary: Просмотр статусов
       description:  Просмотр заявки на скачивание набора файлов.
       parameters:
-        - name: id
-          in: path
-          description: Уникальный идентификатор заявки на скачивание
-          required: true
-          schema:
-            type: integer
+        - $ref: "#/components/parameters/IdTask"
       responses:
-        "201":
-          description: Document created
+        "200":
+          description: success
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/DownloadsIdResponse"
         "400":
-          $ref: '#/components/responses/BadRequest'
+          $ref: '#/components/responses/BadRequest400'
+        "404":
+          $ref: '#/components/responses/NotFound404'
         "500":
-          $ref: '#/components/responses/InternalServerError'
+          $ref: '#/components/responses/InternalServerError500'
+
+  /downloads/{id}/files/{file_id}:
+    get:
+      summary: Скачивание файла
+      description: Скачивание файла по ID таска и ID файла
+      parameters:
+        - $ref: "#/components/parameters/IdTask"
+        - $ref: "#/components/parameters/IdFile"
+      responses:
+        "200":
+          description: success
+          content:
+            application/octet-stream:
+              schema:
+                $ref: "#/components/schemas/DownloadsIdResponse"
+        "400":
+          $ref: '#/components/responses/BadRequest400'
+        "404":
+          $ref: '#/components/responses/NotFound404'
+        "500":
+          $ref: '#/components/responses/InternalServerError500'
+
 
 #
 #  /downloads/{id}/files/{file_id}:
@@ -133,25 +152,53 @@ components:
             oneOf:
               - $ref: "#/components/schemas/UrlFile"
               - $ref: "#/components/schemas/UrlErr"
+
     ErrorResponse:
       type: object
-      required:
-        - code
-        - message
+      required: [code, message]
       properties:
         code:
-          type: string
+          $ref: "#/components/schemas/ErrorCode"
         message:
           type: string
 
+    ErrorCode:
+      type: string
+      description: Код ошибки для файла
+      enum: [ timeout, not_found, forbidden, bad_request, internal_server_error]
+
+
+  parameters:
+    IdTask:
+      name: id
+      in: path
+      description: Уникальный идентификатор заявки на скачивание
+      required: true
+      schema:
+        type: integer
+    IdFile:
+      name: file_id
+      in: path
+      description: Уникальный идентификатор заявки на скачивание
+      required: true
+      schema:
+        type: integer
+
+
   responses:
-    BadRequest:
+    BadRequest400:
       description: Некорректное тело запроса
       content:
         application/json:
           schema:
             $ref: '#/components/schemas/ErrorResponse'
-    InternalServerError:
+    NotFound404:
+      description: Данные не найдены
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ErrorResponse'
+    InternalServerError500:
       description: Внутренняя ошибка сервиса
       content:
         application/json:
